Changed address in the copy

--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -114,7 +114,7 @@
                     <div class="map">
                       <h3 class="aboutUs-social__map-title">Service Area</h3>
                       <p class="aboutUs-social__description">
-                          Service Areas are West Branch, Rose City and Saint Helen as long as it is 20 miles from our location. Any services that are out of range will be an additional .50 cents per 
+                          Service Areas are Lansing and East Lansing as long as it is 20 miles from our location. Any services that are out of range will be an additional .50 cents per 
                           mile added on to the service. If you aren't sure if you are in our service range feel free to fill out the form and we will let you know! 
                       </p>
                       <div class="d-flex justify-content-center">
@@ -469,7 +469,7 @@
                         <i class="fas fa-phone"></i> <p class="footer-text footer-contact-text">(989)217-6097</p><br/>
                         <i class="fas fa-envelope"></i> <p class="footer-text footer-contact-text">happytalespetcare@gmail.com</p>
                         <br/><br/>
-                        <p class="footer-text" style="margin-bottom:1rem;">Servicing West Branch, Saint Helen & Rose City</p>
+                        <p class="footer-text" style="margin-bottom:1rem;">Servicing Lansing and East Lansing</p>
                         <p class="footer-text">Out of service area? Contact us today to figure</p>
                         <p class="footer-text">something out!</p>
                     </div>
