--- a/html/faq.html
+++ b/html/faq.html
@@ -96,7 +96,7 @@
               </div>
               <div id="areasServicedCollapse" class="collapse show" aria-labelledby="areasServiced" data-parent="#faqAccordian">
                 <div class="card-body">
-                    We service most of West Branch, Saint Helen and Rose City all within 20 miles of our location. We do offer services outside of our service area for an additional gas fee of .50 cents per extra mile.
+                    We service most of Lansing and East Lansing, all within 20 miles of our location. We do offer services outside of our service area for an additional gas fee of .50 cents per extra mile.
                 </div>
               </div>
             
@@ -269,7 +269,7 @@
                         <i class="fas fa-phone"></i> <p class="footer-text footer-contact-text">(989)217-6097</p><br/>
                         <i class="fas fa-envelope"></i> <p class="footer-text footer-contact-text">happytalespetcare@gmail.com</p>
                         <br/><br/>
-                        <p class="footer-text" style="margin-bottom:1rem;">Servicing West Branch, Saint Helen & Rose City</p>
+                        <p class="footer-text" style="margin-bottom:1rem;">Servicing Lansing and East Lansing</p>
                         <p class="footer-text">Out of service area? Contact us today to figure</p>
                         <p class="footer-text">something out!</p>
                     </div>
