--- a/html/letsmeet.html
+++ b/html/letsmeet.html
@@ -118,7 +118,7 @@
                             <div class="d-flex justify-content-between">
                                 <div class="form-group schedule-form__form-city">
                                     <label for="form__city">City</label>
-                                    <input name="user_city" type="text" class="form-control" id="form__city" placeholder="West Branch" required>
+                                    <input name="user_city" type="text" class="form-control" id="form__city" placeholder="Lansing" required>
                                 </div>
                                 <div class="form-group schedule-form__form-zip">
                                     <label for="form__zip">ZIP Code</label>
@@ -184,7 +184,7 @@
                     </div>
                     <div class="d-flex justify-content-center schedule-form__download-docs-column__map-text">
                         <p class="schedule-form__download-docs-column__map-text-p">
-                            Service Areas are West Branch, Rose City and Saint Helen as long as it is within 20 miles of my location. 
+                            Service Areas are Lansing and East Lansing as long as it is within 20 miles of my location. 
                             Any services that are out of my range will be an addition .50 cents per mile added on to the service. 
                             If you aren't sure if you are in our service range feel free to fill out the Meet & Greet form and we will let you know! 
                         </p>
@@ -220,7 +220,7 @@
                         <i class="fas fa-phone"></i> <p class="footer-text footer-contact-text">(989)217-6097</p><br/>
                         <i class="fas fa-envelope"></i> <p class="footer-text footer-contact-text">happytalespetcare@gmail.com</p>
                         <br/><br/>
-                        <p class="footer-text" style="margin-bottom:1rem;">Servicing West Branch, Saint Helen & Rose City</p>
+                        <p class="footer-text" style="margin-bottom:1rem;">Servicing Lansing and East Lansing</p>
                         <p class="footer-text">Out of service area? Contact us today to figure</p>
                         <p class="footer-text">something out!</p>
                     </div>
