--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
               <div class="carousel-img carousel-img-1"></div>
               <div class="carousel-caption d-md-block">
                 <div class="hero-carousel__title">
-                  <h1>West Branch's <span class="accent">Premier</span> Pet Care Provider</h1>
+                  <h1>Lansing's <span class="accent">Premier</span> Pet Care Provider</h1>
                 </div>
                 <div class="hero-carousel__paw-divider">
                   <img src="img/Icons/paw-slider.png" alt=""/>
                 </div>
                 <div class="hero-carousel__subtitle">
-                  <h3>Professional Pet Sitting, Dog Walking and more in West Branch, Michigan</h3>
+                  <h3>Professional Pet Sitting, Dog Walking and more in Lansing, Michigan</h3>
                 </div>
               </div>
             </div>
@@ -81,13 +81,13 @@
               <div class="carousel-img carousel-img-2"></div>
               <div class="carousel-caption d-md-block">
                 <div class="hero-carousel__title">
-                  <h1>West Branch's <span class="accent">Premier</span> Pet Care Provider</h1>
+                  <h1>Lansing's <span class="accent">Premier</span> Pet Care Provider</h1>
                 </div>
                 <div class="hero-carousel__paw-divider">
                   <img src="img/Icons/paw-slider.png" alt=""/>
                 </div>
                 <div class="hero-carousel__subtitle">
-                  <h3>Professional Pet Sitting, Dog Walking and more in West Branch, Michigan</h3>
+                  <h3>Professional Pet Sitting, Dog Walking and more in Lansing, Michigan</h3>
                 </div>
               </div>
             </div>
@@ -95,13 +95,13 @@
               <div class="carousel-img carousel-img-3"></div>
               <div class="carousel-caption d-md-block">
                 <div class="hero-carousel__title">
-                  <h1>West Branch's <span class="accent">Premier</span> Pet Care Provider</h1>
+                  <h1>Lansing's <span class="accent">Premier</span> Pet Care Provider</h1>
                 </div>
                 <div class="hero-carousel__paw-divider">
                   <img src="img/Icons/paw-slider.png" alt=""/>
                 </div>
                 <div class="hero-carousel__subtitle">
-                  <h3>Professional Pet Sitting, Dog Walking and more in West Branch, Michigan</h3>
+                  <h3>Professional Pet Sitting, Dog Walking and more in Lansing, Michigan</h3>
                 </div>
               </div>
             </div>
@@ -115,7 +115,7 @@
         <!--Intro Paragraph-->
         <div class="intro-paragraph">
           <p><span class="accent-letter">H</span>appy Tales Pet Care is devoted to giving your pets the absolute best care around, which is why
-            we offer fully customizable services. If you live around West Branch, Rose City or Saint Helen, give us a call today!
+            we offer fully customizable services. If you live around Lansing or East Lansing, give us a call today!
           </p> 
         </div>
         <!-- END OF Intro Paragraph-->
@@ -397,7 +397,7 @@
                         <i class="fas fa-phone"></i> <p class="footer-text footer-contact-text">(989)217-6097</p><br/>
                         <i class="fas fa-envelope"></i> <p class="footer-text footer-contact-text">happytalespetcare@gmail.com</p>
                         <br/><br/>
-                        <p class="footer-text" style="margin-bottom:1rem;">Servicing West Branch, Saint Helen & Rose City</p>
+                        <p class="footer-text" style="margin-bottom:1rem;">Servicing Lansing and East Lansing</p>
                         <p class="footer-text">Out of service area? Contact us today to figure</p>
                         <p class="footer-text">something out!</p>
                     </div>
