--- a/html/gallery.html
+++ b/html/gallery.html
@@ -416,7 +416,7 @@
                         <i class="fas fa-phone"></i> <p class="footer-text footer-contact-text">(989)217-6097</p><br/>
                         <i class="fas fa-envelope"></i> <p class="footer-text footer-contact-text">happytalespetcare@gmail.com</p>
                         <br/><br/>
-                        <p class="footer-text" style="margin-bottom:1rem;">Servicing West Branch, Saint Helen & Rose City</p>
+                        <p class="footer-text" style="margin-bottom:1rem;">Servicing Lansing and East Lansing</p>
                         <p class="footer-text">Out of service area? Contact us today to figure</p>
                         <p class="footer-text">something out!</p>
                     </div>
